[project]
name = "semantic_extraction"
version = "0.1.0"
description = "A project for trend analysis based on NLP semantic extraction"
authors = [
    {name = "Jonathan Frees", email = "jmfrees@uab.edu"},
]
dependencies = [
    "sentence-transformers~=2.1",
    "hnswlib~=0.5",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = ""}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black~=21.6", "isort~=5.9", "pytest~=6.2"]

[tool.isort]
length_sort = "1"
profile = "black"
sections="STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib="STL"
import_heading_thirdparty="PDM"
import_heading_firstparty="LOCAL"
import_heading_localfolder="LOCAL"
